# ourcorp-sysroot

./: BUILD  MODULE.bazel  README.md  main.c  sysroot.bzl
