bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

ourcorp_sysroot = use_repo_rule("//:sysroot.bzl", "ourcorp_sysroot")
ourcorp_sysroot(name = "ourcorp_sysroot")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "hermetic_llvm",
    llvm_version = "19.1.0",
    cxx_standard = {"": "c++20"},
    stdlib = {
        "linux-x86_64": "libc++",
        "linux-aarch64": "libc++",
    },
)
llvm.sysroot(
    name = "hermetic_llvm",
    label = "@ourcorp_sysroot//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "hermetic_llvm")
